Update Docker sub-skill with boot-ui's four image variants (#19)
Generalize boot-ui's four advanced Docker images for the skill's generic
single-module Spring Boot projects and ship them end to end.

Assets:
- Dockerfile: jlink custom runtime + distroless base + exploded Spring Boot
  layers + JVM tuning via JAVA_TOOL_OPTIONS
- Dockerfile-aot (new): JVM + Spring AOT, distroless
- Dockerfile-crac (new): CRaC via BellSoft Liberica JDK 21, plus
  checkpoint-and-run.sh entrypoint
- Dockerfile-native: GraalVM "mostly-static" + distroless
- Compose files for each variant; drop in-container curl/wget healthchecks
  that distroless cannot run

Generator (scripts/lib/versions.mjs):
- applyDotfiles now ships all four Dockerfiles, the CRaC entrypoint, and the
  matching compose files into generated projects
- New patchPomProfiles() injects the aot and crac Maven profiles (native is
  already provided by start.spring.io)

Docs:
- references/DOCKER.md: rewritten around the four variants, Maven profiles,
  distroless realities, comparison table, and troubleshooting
- sync-versions-in-docs.mjs: rules for the new base-image tokens and files
- SKILL.md and scripts/README.md: reflect all four images
- workshop: 08-deployment.md (jlink+distroless deep-dive, no HEALTHCHECK,
  JAVA_TOOL_OPTIONS/JarLauncher, fixed compose service names),
  03-generated-application.md, 02-getting-started.md,
  appendix-b-troubleshooting.md (distroless "no shell" debugging)

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>